# alook

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DESIGN.md  README.md  codecov.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: dependabot.yml
.github/workflows/: auto-tag-release.yml  ci.yml  desktop-release.yml  e2e-ui.yml  mobile-release.yml  publish-app.yml  publish-cli.yml  publish-daemon.yml
scripts/: bump-version.mjs
src/app/: package.json
src/cli/: README.md  package.json  tsconfig.build.json  tsconfig.json
src/daemon/: LICENSE  README.md  package.json  vitest.config.ts
src/desktop/: package.json
src/desktop/src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json  tauri.macos.conf.json
src/desktop/src-tauri/capabilities/: default.json  desktop.json  mobile.json
src/desktop/src-tauri/icons/: icon.icns
src/desktop/src-tauri/plugins/tauri-plugin-push/: Cargo.toml  build.rs
src/desktop/src-tauri/plugins/tauri-plugin-push/android/src/main/kotlin/com/alook/push/: PushMessagingService.kt  PushPlugin.kt
src/desktop/src-tauri/plugins/tauri-plugin-push/ios/Sources/: PushPlugin.swift
src/desktop/src-tauri/plugins/tauri-plugin-push/permissions/autogenerated/: reference.md
src/desktop/src-tauri/plugins/tauri-plugin-push/permissions/autogenerated/commands/: on_notification.toml
src/desktop/src-tauri/plugins/tauri-plugin-push/permissions/schemas/: schema.json
src/desktop/src-tauri/plugins/tauri-plugin-push/src/: commands.rs  lib.rs
src/desktop/src-tauri/src/: commands.rs  lib.rs  macos_window.rs  main.rs
src/email-worker/: .dev.vars.example  package.json  tsconfig.json  wrangler.toml
src/shared/: index.ts  package.json  schemas.test.ts  schemas.ts  tsconfig.json
(+956 files in other folders)
