[package]
name = "tauri-plugin-push"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin for push notifications via FCM (Android) and APNs (iOS)"

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
